ajustes de estilos en footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -176,26 +176,21 @@
       <!-- Seccion contacto -->
 
       <!-- FOOTER -->
-      <footer class="footer p-4">
-        <div class="row pt-4 pb-4">
-          <div class="col-sm-12 col-md-4">
-            <div class="p-4 d-block">
-              <a href="#">+54******</a>
-              <a href="#">contacto@guacarace.com</a>
+      <footer class="footer">
+        <div class="row pt-4 pb-4 align-items-center">
+          <div class="col-sm-12 col-md-6">
+            <div class="p-4">
+              <img
+                src="../img//logo_guacarace-color.svg"
+                alt="guacarace logo"
+                width="84"
+                height="auto"
+              />
             </div>
           </div>
 
-          <div class="col-sm-12 col-md-4 text-center">
-            <img
-              src="../img//logo_guacarace-color.svg"
-              alt="guacarace logo"
-              width="84"
-              height="auto"
-            />
-          </div>
-
-          <div class="col-sm-12 col-md-4">
-            <div class="social-icons p-4">
+          <div class="col-sm-12 col-md-6">
+            <div class="social-icons">
               <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
               <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
               <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
