mapas de recorridos agregados, y estilos de la misma seccion modificados

--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -105,66 +105,121 @@
 
       <!-- Seccion mapas -->
       <section class="recorridos">
-        <div class="row p-4">
-          <h2 class="title-l pt-4 pb-4">recorridos</h2>
-          <div class="col-12 col-lg-4">
-            <article class="border border-3 p-4 text-center">
-              <h3 class="fw-bold text-uppercase fc-brand">21k</h3>
-              <div class="recorrido__map">
-                <img src="/img/16k.jpg" alt="recorrido" />
+        <div class="row align-items-center pt-5">
+          <h2 class="mt-5 text-center text-uppercase fw-bold">
+            elegi tu distancia
+          </h2>
+          <div
+            class="col-12 text-center d-flex align-items-center justify-content-evenly"
+          >
+            <div class="row align-items-center mt-4">
+              <div class="col-4">
+                <a class="btn btn-primary" href="#k-21" role="button">21K</a>
               </div>
-              <p class="pt-4 text-justify">
-                Equipo obligatorio: Recipiente para 1 litro de agua (priorizar
-                hidratación) Linterna frontal Remera Oficial de UTACCH Equipo
-                recomendado: Campera corta viento impermeable.
-              </p>
-            </article>
-          </div>
-          <div class="col-12 col-lg-4">
-            <article class="border border-3 p-4 text-center">
-              <h3 class="fw-bold text-uppercase fc-brand">15k</h3>
-              <div class="recorrido__map">
-                <img src="/img/16k.jpg" alt="recorrido" />
+              <div class="col-4">
+                <a class="btn btn-primary" href="#k-15" role="button">15K</a>
               </div>
-              <p class="pt-4 text-justify">
-                Equipo obligatorio: Recipiente para 1 litro de agua (priorizar
-                hidratación) Linterna frontal Remera Oficial de UTACCH Equipo
-                recomendado: Campera corta viento impermeable.
-              </p>
-            </article>
-          </div>
-          <div class="col-12 col-lg-4">
-            <article class="border border-3 p-4 text-center">
-              <h3 class="fw-bold text-uppercase fc-brand">7k</h3>
-              <div class="recorrido__map">
-                <img src="/img/16k.jpg" alt="recorrido" />
+              <div class="col-4">
+                <a class="btn btn-primary" href="#k-7" role="button">7K</a>
               </div>
-              <p class="pt-4 text-justify">
-                Equipo obligatorio: Recipiente para 1 litro de agua (priorizar
-                hidratación) Linterna frontal Remera Oficial de UTACCH Equipo
-                recomendado: Campera corta viento impermeable.
-              </p>
-            </article>
+            </div>
           </div>
+        </div>
+
+        <!-- map 21k -->
+        <div
+          class="row d-flex align-items-center justify-content-center mt-5 p-4"
+        >
+          <div class="col-12 col-md-6 text-end">
+            <img src="/img/map_gr21.png" alt="recorrido-21km" />
+          </div>
+          <div class="col-12 col-md-6 d-flex flex-column">
+            <p id="k-21" class="fs-1 fw-bold text-uppercase">21K competitiva</p>
+            <div>
+              <span class="icon-list fw-bold d-block p-1"
+                >Hora de largada: 07:00 hs</span
+              >
+              <span class="icon-list fw-bold d-block p-1"
+                >PC en kms: 5, 12 y 18</span
+              >
+              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 6hs</span>
+            </div>
+            <div>
+              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- map 15k -->
+        <div
+          class="row d-flex align-items-center justify-content-center mt-5 p-4"
+        >
+          <div class="col-12 col-md-6 text-end">
+            <img src="/img/map_gr15.png" alt="recorrido-15km" />
+          </div>
+          <div class="col-12 col-md-6 d-flex flex-column">
+            <p id="k-15" class="fs-1 fw-bold text-uppercase">15K competitiva</p>
+            <div>
+              <span class="icon-list fw-bold d-block p-1"
+                >Hora de largada: 07:30 hs</span
+              >
+              <span class="icon-list fw-bold d-block p-1"
+                >PC en kms: 5 y 12</span
+              >
+              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 4hs</span>
+            </div>
+            <div>
+              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+            </div>
+          </div>
+        </div>
+        <!-- map 7k -->
+        <div
+          class="row d-flex align-items-center justify-content-center mt-5 p-4"
+        >
+          <div class="col-12 col-md-6 text-end">
+            <img src="/img/map_gr7.png" alt="recorrido-7km" />
+          </div>
+          <div class="col-12 col-md-6 d-flex flex-column">
+            <p id="k-7" class="fs-1 fw-bold text-uppercase">7K competitiva</p>
+            <div>
+              <span class="icon-list fw-bold d-block p-1"
+                >Hora de largada: 08:00 hs</span
+              >
+              <span class="icon-list fw-bold d-block p-1"
+                >PC en km: 5</span
+              >
+              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 3hs</span>
+            </div>
+            <div>
+              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+            </div>
+          </div>
+          
         </div>
       </section>
 
       <!-- fin Seccion mapas -->
 
-      <section class="recorridos">
-        <div class="row p-4">
-          <div class="col-12 col-md-6">
-            <h2 class="title-l text-justify">medio ambiente</h2>
+      <section class="recorridos__eco">
+        
+        <div class="row p-4 d-flex justify-content-center align-items-center">
+          <div class="col-12 col-md-6 mt-4">
+            <h2 class="fw-bold text-uppercase text-justify">medio ambiente</h2>
             <p>
               Se recuerda a todos los competidores la importancia de mantener el
               medio ambiente limpio en las carreras de aventura. Deben guardar
               todos sus residuos, sean papeles de barras de cereales ó botellas
-              plásticas. Habrá penalizaciones para quienes no respeten esta
-              consigna. Si ven a alguien que tira basura, por más chica que sea,
-              se les pide que se lo hagan notar y que le pidan que la levante.
+              plásticas. 
+              <p>Habrá penalizaciones para quienes no respeten esta
+                consigna. Si ven a alguien que tira basura, por más chica que sea,
+                se les pide que se lo hagan notar y que le pidan que la levante.</p> 
             </p>
           </div>
-          <div class="col-12 col-md-6 text-center">
+          <div class="col-12 col-md-6 text-end d-sm-none d-md-block">
+            <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
+          </div>
+          <div class="col-12 col-md-6 text-center d-md-none d-sm-block">
             <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
           </div>
         </div>
