--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link active text-white text-uppercase fw-bold"
+                      class="nav-link active text-uppercase"
                       aria-current="page"
                       href="./index.html"
                       >Home</a
@@ -69,28 +69,26 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/inscripciones.html"
                       >Inscripciones</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/recorridos.html"
                       >Recorridos</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a
-                      class="nav-link text-white text-uppercase fw-bold"
-                      href="/pages/info.html"
+                    <a class="nav-link text-uppercase" href="/pages/info.html"
                       >info</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/contacto.html"
                       >Contacto</a
                     >
@@ -110,9 +108,9 @@
             class="col-md-12 d-flex justify-content-center align-items-center hero"
           >
             <div class="fs-5 fw-regular text-uppercase text-center pt-1">
-              <p>veni a ser parte de</p>
-              <p>una carrera extraordinaria</p>
-              <p>unica e inolvidable</p>
+              <span class="d-block">veni a ser parte de</span>
+              <span class="d-block">una carrera extraordinaria</span>
+              <span class="d-block">unica e inolvidable</span>
               <button type="button" class="btn btn-outline-light fw-bold mt-5">
                 Comienza la aventura
               </button>
@@ -125,12 +123,19 @@
       <section class="resena">
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6 pt-4">
-            <div class="p-5">
+            <div class="p-5 text-center d-sm-none d-md-block">
               <img src="/img/gr-logo.svg" alt="logo-guacarace" />
+            </div>
+            <div class="pt-5 d-none d-sm-block d-md-none">
+              <img
+                class="text-center w-50"
+                src="/img/gr-logo.svg"
+                alt="logo-guacarace"
+              />
             </div>
           </div>
           <div class="col-sm-12 col-md-6">
-            <p class="fw-bold fs-5 p-5">
+            <p class="fw-bold fst-italic fs-5 p-5">
               Pensada por runners para runners. Una aventura única. Empieza
               mucho antes del conteo previo a largar. Empieza cuando la
               imaginas, cuando entrenas para llegar a ella, cuando en tu mente
@@ -147,8 +152,10 @@
           <div class="col-12">
             <div class="ratio ratio-21x9">
               <iframe
-                src="https://youtu.be/WZA0H8K6340"
-                title="YouTube video"
+                src="https://www.youtube.com/embed/Z_df-TUxPJs"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
             </div>
