--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link active text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       aria-current="page"
                       href="../index.html"
                       >Home</a
@@ -69,28 +69,26 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/inscripciones.html"
                       >Inscripciones</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/recorridos.html"
                       >Recorridos</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a
-                      class="nav-link text-white text-uppercase fw-bold"
-                      href="/pages/info.html"
+                    <a class="nav-link text-uppercase" href="/pages/info.html"
                       >info</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link active text-uppercase"
                       href="/pages/contacto.html"
                       >Contacto</a
                     >
