--- a/pages/info.html
+++ b/pages/info.html
@@ -58,7 +58,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link active text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       aria-current="page"
                       href="../index.html"
                       >Home</a
@@ -66,28 +66,28 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/inscripciones.html"
                       >Inscripciones</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/recorridos.html"
                       >Recorridos</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link active text-uppercase"
                       href="/pages/info.html"
                       >info</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/contacto.html"
                       >Contacto</a
                     >
