--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -58,7 +58,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link active text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       aria-current="page"
                       href="../index.html"
                       >Home</a
@@ -66,28 +66,28 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase active"
                       href="/pages/inscripciones.html"
                       >Inscripciones</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/recorridos.html"
                       >Recorridos</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/info.html"
                       >info</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/contacto.html"
                       >Contacto</a
                     >
@@ -120,7 +120,7 @@
               <p class="mt-2 text-center">Te dirigiremos al sitio donde deberas completar el formulario de pre-inscripcion y 
                  <p>ademas elegir la forma de pago, para asegurar tu lugar en la carrera<p>
                  </p>
-                 <button class="btn btn-danger mt-4">Inscribite</button>
+                 <button class="btn btn-dark text-center text-capitalize mt-4">inscribite</button>
             </div>
           </div>
         </div>
