--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a
-                      class="nav-link active text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       aria-current="page"
                       href="../index.html"
                       >Home</a
@@ -69,28 +69,28 @@
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/inscripciones.html"
                       >Inscripciones</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link active text-uppercase"
                       href="/pages/recorridos.html"
                       >Recorridos</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/info.html"
                       >info</a
                     >
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link text-white text-uppercase fw-bold"
+                      class="nav-link text-uppercase"
                       href="/pages/contacto.html"
                       >Contacto</a
                     >
@@ -105,7 +105,7 @@
 
       <!-- Seccion mapas -->
       <section class="recorridos">
-        <div class="row align-items-center pt-5">
+        <div class="row align-items-center pt-5 pb-5 bg-gray">
           <h2 class="mt-5 text-center text-uppercase fw-bold">
             elegi tu distancia
           </h2>
