ajustes en la seccion de recorridos, tamaños de mapas, y tamaños  en sponsors

--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
             class="col-md-12 d-flex justify-content-center align-items-center hero"
           >
             <div class="fs-5 fw-regular text-uppercase text-center pt-1">
-              <span class="d-block">veni a ser parte de</span>
-              <span class="d-block">una carrera extraordinaria</span>
-              <span class="d-block">unica e inolvidable</span>
-              <button type="button" class="btn btn-outline-light fw-bold mt-5">
-                Comienza la aventura
+              <span class="fs-2 d-block fw-bold">superate</span>
+              <span class="fs-2 d-block fw-bold pb-2">sin limites</span>
+              <hr />
+              <span class="d-block pt-2">25 de septiembre</span>
+              <button
+                type="button"
+                class="btn btn-outline-light text-capitalize fw-bold mt-5"
+              >
+                inscribite
               </button>
             </div>
           </div>
@@ -148,9 +152,9 @@
       </section>
       <!-- Incio video -->
       <section class="video">
-        <div class="row align-items-center">
+        <div class="row align-items-center pb-4">
           <div class="col-12">
-            <div class="ratio ratio-21x9">
+            <div class="ratio ratio-21x9 video__youtube">
               <iframe
                 src="https://www.youtube.com/embed/Z_df-TUxPJs"
                 title="YouTube video player"
@@ -166,13 +170,13 @@
 
       <!-- inicia sponsor -->
       <div class="row align-items-center sponsors text-center pt-4">
-        <div class="col-sm-12 col-md-4 col-lg-4 p-2 sponsors-img">
+        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
           <img src="/img/gatorade.png" alt="gatorade-logo" />
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-4 p-2 sponsors-img">
+        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
           <img src="/img/salomon.png" alt="salomon-logo" />
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-4 p-2 sponsors-img">
+        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
           <img src="/img/walmart.png" alt="walmart-logo" />
         </div>
       </div>
