--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -1,267 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Conoce los recorridos de las 3 distancias"
-    />
-    <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Conoce los recorridos de las 3 distancias" />
+  <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
-    <title>Recorridos | Guacarace</title>
-  </head>
-  <body class="body__style">
-    <div class="container-fluid bg-container">
-      <!-- INICIO HEADER -->
-      <header>
-        <div class="row">
-          <nav class="navbar navbar-expand-lg navbar-light menu__style">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img
-                  src="/img/gr-logo.svg"
-                  alt=""
-                  width="84"
-                  height="60"
-                  class="d-inline-block align-text-top"
-                />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div
-                class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end"
-                id="navbarNav"
-              >
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      aria-current="page"
-                      href="../index.html"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/inscripciones.html"
-                      >Inscripciones</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active text-uppercase"
-                      href="/pages/recorridos.html"
-                      >Recorridos</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/info.html"
-                      >info</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/contacto.html"
-                      >Contacto</a
-                    >
-                  </li>
-                </ul>
-              </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+  <title>Recorridos | Guacarace</title>
+</head>
+
+<body class="body__style">
+  <div class="container-fluid bg-container">
+    <!-- INICIO HEADER -->
+    <header>
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light menu__style">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="/img/gr-logo.svg" alt="" width="84" height="60" class="d-inline-block align-text-top" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/inscripciones.html">Inscripciones</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active text-uppercase" href="/pages/recorridos.html">Recorridos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/info.html">info</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </div>
-      </header>
-      <!-- FIN HEADER -->
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- FIN HEADER -->
 
-      <!-- Seccion mapas -->
-      <section class="recorridos">
-        <div class="row align-items-center pt-5 pb-5 bg-gray">
-          <h2 class="mt-5 text-center text-uppercase fw-bold">
-            elegi tu distancia
-          </h2>
-          <div
-            class="col-12 text-center d-flex align-items-center justify-content-evenly"
-          >
-            <div class="row align-items-center mt-4">
-              <div class="col-4">
-                <a class="btn btn-primary" href="#k-21" role="button">21K</a>
-              </div>
-              <div class="col-4">
-                <a class="btn btn-primary" href="#k-15" role="button">15K</a>
-              </div>
-              <div class="col-4">
-                <a class="btn btn-primary" href="#k-7" role="button">7K</a>
-              </div>
+    <!-- Seccion mapas -->
+    <section class="recorridos">
+      <div class="row align-items-center pt-5 pb-5 bg-gray">
+        <h2 class="mt-5 text-center text-uppercase fw-bold">
+          elegi tu distancia
+        </h2>
+        <div class="col-12 text-center d-flex align-items-center justify-content-evenly">
+          <div class="row align-items-center mt-4">
+            <div class="col-4">
+              <a class="btn btn-primary" href="#k-21" role="button">21K</a>
+            </div>
+            <div class="col-4">
+              <a class="btn btn-primary" href="#k-15" role="button">15K</a>
+            </div>
+            <div class="col-4">
+              <a class="btn btn-primary" href="#k-7" role="button">7K</a>
             </div>
           </div>
         </div>
+      </div>
 
-        <!-- map 21k -->
-        <div
-          class="row d-flex align-items-center justify-content-center mt-5 p-4"
-        >
-          <div class="col-12 col-md-6 text-end">
-            <img src="/img/map_gr21.png" alt="recorrido-21km" />
-          </div>
-          <div class="col-12 col-md-6 d-flex flex-column">
-            <p id="k-21" class="fs-1 fw-bold text-uppercase">21K competitiva</p>
-            <div>
-              <span class="icon-list fw-bold d-block p-1"
-                >Hora de largada: 07:00 hs</span
-              >
-              <span class="icon-list fw-bold d-block p-1"
-                >PC en kms: 5, 12 y 18</span
-              >
-              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 6hs</span>
+      <!-- map 21k -->
+      <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
+
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6 recorridos__maps">
+            <p id="k-21" class="fs-2 fw-bold text-uppercase">21K competitiva</p>
+            <div class="recorridos__maps-items">
+              <span class="icon-list fw-bold d-block pt-1">Largada: 07:00 hs</span>
+              <span class="icon-list fw-bold d-block pt-1">PC en kms: 5, 12 y 18</span>
+              <span class="icon-list fw-bold d-block pt-1">tiempo limite: 6hs</span>
             </div>
+
             <div>
               <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
             </div>
           </div>
+          <div class="col-12 col-md-6">
+            <figure class="recorridos__maps-img">
+              <img src="/img/map_gr21.png" alt="recorrido-21km" />
+            </figure>
+
+          </div>
+
+        </div>
+    </section>
+
+    <!-- fin Seccion mapas -->
+
+    <section class="recorridos__eco">
+
+      <div class="row p-4 d-flex justify-content-center align-items-center">
+        <div class="col-12 col-md-6 mt-4">
+          <h2 class="fw-bold text-uppercase text-justify">medio ambiente</h2>
+          <p class="text-justify">
+            Se recuerda a todos los competidores la importancia de mantener el
+            medio ambiente limpio en las carreras de aventura. Deben guardar
+            todos sus residuos, sean papeles de barras de cereales ó botellas
+            plásticas.
+          <p class="text-justify">Habrá penalizaciones para quienes no respeten esta
+            consigna. Si ven a alguien que tira basura, por más chica que sea,
+            se les pide que se lo hagan notar y que le pidan que la levante.</p>
+          </p>
+        </div>
+        <div class="col-12 col-md-6 text-end d-sm-none d-md-block">
+          <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
+        </div>
+        <div class="col-12 col-md-6 text-center d-md-none d-sm-block">
+          <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="row pt-4 pb-4 align-items-center">
+        <div class="col-sm-12 col-md-6">
+          <div class="p-4">
+            <img src="../img//logo_guacarace-color.svg" alt="guacarace logo" width="84" height="auto" />
+          </div>
         </div>
 
-        <!-- map 15k -->
-        <div
-          class="row d-flex align-items-center justify-content-center mt-5 p-4"
-        >
-          <div class="col-12 col-md-6 text-end">
-            <img src="/img/map_gr15.png" alt="recorrido-15km" />
-          </div>
-          <div class="col-12 col-md-6 d-flex flex-column">
-            <p id="k-15" class="fs-1 fw-bold text-uppercase">15K competitiva</p>
-            <div>
-              <span class="icon-list fw-bold d-block p-1"
-                >Hora de largada: 07:30 hs</span
-              >
-              <span class="icon-list fw-bold d-block p-1"
-                >PC en kms: 5 y 12</span
-              >
-              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 4hs</span>
-            </div>
-            <div>
-              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
-            </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="social-icons">
+            <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
+            <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
+            <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
           </div>
         </div>
-        <!-- map 7k -->
-        <div
-          class="row d-flex align-items-center justify-content-center mt-5 p-4"
-        >
-          <div class="col-12 col-md-6 text-end">
-            <img src="/img/map_gr7.png" alt="recorrido-7km" />
-          </div>
-          <div class="col-12 col-md-6 d-flex flex-column">
-            <p id="k-7" class="fs-1 fw-bold text-uppercase">7K competitiva</p>
-            <div>
-              <span class="icon-list fw-bold d-block p-1"
-                >Hora de largada: 08:00 hs</span
-              >
-              <span class="icon-list fw-bold d-block p-1"
-                >PC en km: 5</span
-              >
-              <span class="icon-list fw-bold d-block p-1">Tiempo para completar la prueba: 3hs</span>
-            </div>
-            <div>
-              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
-            </div>
-          </div>
-          
-        </div>
-      </section>
+      </div>
+    </footer>
 
-      <!-- fin Seccion mapas -->
+    <!-- Mi container -->
+  </div>
 
-      <section class="recorridos__eco">
-        
-        <div class="row p-4 d-flex justify-content-center align-items-center">
-          <div class="col-12 col-md-6 mt-4">
-            <h2 class="fw-bold text-uppercase text-justify">medio ambiente</h2>
-            <p>
-              Se recuerda a todos los competidores la importancia de mantener el
-              medio ambiente limpio en las carreras de aventura. Deben guardar
-              todos sus residuos, sean papeles de barras de cereales ó botellas
-              plásticas. 
-              <p>Habrá penalizaciones para quienes no respeten esta
-                consigna. Si ven a alguien que tira basura, por más chica que sea,
-                se les pide que se lo hagan notar y que le pidan que la levante.</p> 
-            </p>
-          </div>
-          <div class="col-12 col-md-6 text-end d-sm-none d-md-block">
-            <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
-          </div>
-          <div class="col-12 col-md-6 text-center d-md-none d-sm-block">
-            <img src="/img/eco.png" alt="medio-ambiente" class="w-50 h-auto" />
-          </div>
-        </div>
-      </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-      <!-- FOOTER -->
-      <footer class="footer">
-        <div class="row pt-4 pb-4 align-items-center">
-          <div class="col-sm-12 col-md-6">
-            <div class="p-4">
-              <img
-                src="../img//logo_guacarace-color.svg"
-                alt="guacarace logo"
-                width="84"
-                height="auto"
-              />
-            </div>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <div class="social-icons">
-              <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
-              <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
-              <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
-            </div>
-          </div>
-        </div>
-      </footer>
-
-      <!-- Mi container -->
-    </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
