ajustes de mapas

--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -103,7 +103,65 @@
           </div>
 
         </div>
+      </div>
+      <!--fin map 21k -->
+
+      <!-- map 15k -->
+      <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
+
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6 recorridos__maps">
+            <p id="k-15" class="fs-2 fw-bold text-uppercase">15K competitiva</p>
+            <div class="recorridos__maps-items">
+              <span class="icon-list fw-bold d-block pt-1">Largada: 07:00 hs</span>
+              <span class="icon-list fw-bold d-block pt-1">PC en kms: 5, 12 y 18</span>
+              <span class="icon-list fw-bold d-block pt-1">tiempo limite: 4hs</span>
+            </div>
+
+            <div>
+              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <figure class="recorridos__maps-img">
+              <img src="/img/map_gr15.png" alt="recorrido-21km" />
+            </figure>
+
+          </div>
+
+        </div>
+      </div>
+      <!--fin map 15k -->
+
+      <!-- map 7k -->
+      <div class="row d-flex align-items-center justify-content-center mt-5 p-4">
+
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6 recorridos__maps">
+            <p id="k-7" class="fs-2 fw-bold text-uppercase">7K competitiva</p>
+            <div class="recorridos__maps-items">
+              <span class="icon-list fw-bold d-block pt-1">Largada: 07:00 hs</span>
+              <span class="icon-list fw-bold d-block pt-1">PC en km: 5</span>
+              <span class="icon-list fw-bold d-block pt-1">tiempo limite: 3hs</span>
+            </div>
+
+            <div>
+              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <figure class="recorridos__maps-img">
+              <img src="/img/map_gr7.png" alt="recorrido-21km" />
+            </figure>
+
+          </div>
+
+        </div>
+      </div>
+      <!--fin map 7k -->
+
     </section>
+
 
     <!-- fin Seccion mapas -->
 
