--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,215 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Contacta con la organizacion para aclarar cualquier duda"
-    />
-    <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Contacta con la organizacion para aclarar cualquier duda" />
+  <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
-    <title>Contactanos | Guacarace</title>
-  </head>
-  <body class="body__style">
-    <div class="container-fluid bg-container">
-      <!-- INICIO HEADER -->
-      <header>
-        <div class="row">
-          <nav class="navbar navbar-expand-lg navbar-light menu__style">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img
-                  src="/img/gr-logo.svg"
-                  alt=""
-                  width="84"
-                  height="60"
-                  class="d-inline-block align-text-top"
-                />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div
-                class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end"
-                id="navbarNav"
-              >
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      aria-current="page"
-                      href="../index.html"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/inscripciones.html"
-                      >Inscripciones</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/recorridos.html"
-                      >Recorridos</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="/pages/info.html"
-                      >info</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active text-uppercase"
-                      href="/pages/contacto.html"
-                      >Contacto</a
-                    >
-                  </li>
-                </ul>
-              </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+  <title>Contactanos | Guacarace</title>
+</head>
+
+<body class="body__style">
+  <div class="container-fluid bg-container">
+    <!-- INICIO HEADER -->
+    <header>
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light menu__style">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="/img/gr-logo.svg" alt="" width="84" height="60" class="d-inline-block align-text-top" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/inscripciones.html">Inscripciones</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/recorridos.html">Recorridos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-uppercase" href="/pages/info.html">info</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active text-uppercase" href="/pages/contacto.html">contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- FIN HEADER -->
+
+    <!-- Seccion contacto -->
+
+    <section class="contacto">
+      <div class="row align-items-center">
+        <div class="col-12 mt-3 text-center">
+          <h1 class="title-l mt-5">contacto</h1>
         </div>
-      </header>
-      <!-- FIN HEADER -->
+      </div>
+      <div class="row align-items-center">
+        <div class="col-12 col-md-6 p-5">
+          <div class="w-75">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+              <input type="text" class="form-control" placeholder="Nombre" aria-label="First name" />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="user@guacarace.com" />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+          </div>
 
-      <!-- Seccion contacto -->
-
-      <section class="contacto">
-        <div class="row align-items-center">
-          <div class="col-12 mt-3 text-center">
-            <h1 class="title-l mt-5">contacto</h1>
+          <div class="align-items-center mt-4">
+            <button type="reset" class="btn btn-dark text-capitalize">
+              restablecer
+            </button>
+            <button type="submit" class="btn btn-success text-capitalize">
+              enviar
+            </button>
           </div>
         </div>
-        <div class="row align-items-center">
-          <div class="col-12 col-md-6 p-5">
-            <div class="w-75">
-              <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label"
-                  >Nombre</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Nombre"
-                  aria-label="First name"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label"
-                  >Email</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleFormControlInput1"
-                  placeholder="user@guacarace.com"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label"
-                  >Mensaje</label
-                >
-                <textarea
-                  class="form-control"
-                  id="exampleFormControlTextarea1"
-                  rows="3"
-                ></textarea>
-              </div>
-            </div>
 
-            <div class="align-items-center mt-4">
-              <button type="reset" class="btn btn-dark text-capitalize">
-                restablecer
-              </button>
-              <button type="submit" class="btn btn-success text-capitalize">
-                enviar
-              </button>
-            </div>
+        <div class="col-12 col-md-6 align-items-center">
+          <div class="text-center fs-4 fw-bold">
+            <p>+54***********</p>
+            <p>Av. Ferre 610</p>
           </div>
 
-          <div class="col-12 col-md-6 align-items-center">
-            <div class="text-center fs-4 fw-bold">
-              <p>+54***********</p>
-              <p>Av. Ferre 610</p>
-            </div>
-
-            <div class="border-top border-2 social-icons mt-5 text-center">
-              <p class="fs-4 fw-bold pt-4 mb-4">Seguinos en:</p>
-              <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
-              <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
-              <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
-            </div>
+          <div class="border-top border-2 social-icons mt-5 text-center">
+            <p class="fs-4 fw-bold pt-4 mb-4">Seguinos en:</p>
+            <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
+            <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
+            <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
           </div>
         </div>
-      </section>
-      <!-- Seccion contacto -->
+      </div>
+    </section>
+    <!-- Seccion contacto -->
 
-      <!-- FOOTER -->
-      <footer class="footer">
-        <div class="row pt-4 pb-4 align-items-center">
-          <div class="col-sm-12 col-md-6">
-            <div class="p-4">
-              <img
-                src="../img//logo_guacarace-color.svg"
-                alt="guacarace logo"
-                width="84"
-                height="auto"
-              />
-            </div>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <div class="social-icons">
-              <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
-              <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
-              <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
-            </div>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="row pt-4 pb-4 align-items-center">
+        <div class="col-sm-12 col-md-6">
+          <div class="p-4">
+            <img src="../img//logo_guacarace-color.svg" alt="guacarace logo" width="84" height="auto" />
           </div>
         </div>
-      </footer>
 
-      <!-- Mi container -->
-    </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="social-icons">
+            <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
+            <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
+            <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Mi container -->
+  </div>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
