--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -117,7 +117,7 @@
             <div class="text-center">
               <h2 class="d-xs-none text-uppercase fw-bold">formulario de inscripcion</h2>
               <h5 class="d-none d-xs-block">formulario de inscripcion</h5>
-              <p class="mt-2 text-center">Te dirigiremos al sitio donde deberas completar el formulario de pre-inscripcion y 
+              <p class="mt-2 text-justify">Te dirigiremos al sitio donde deberas completar el formulario de pre-inscripcion y 
                  <p>ademas elegir la forma de pago, para asegurar tu lugar en la carrera<p>
                  </p>
                  <button class="btn btn-dark text-center text-capitalize mt-4">inscribite</button>
