ajustes en la seccion de contacto. crecion de botones de estilos propios

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,16 +59,16 @@
     <!-- FIN HEADER -->
 
     <!-- Seccion contacto -->
+    <div class="row align-items-center bg-gray">
+      <div class="col-12">
+        <h1 class="title-l fc-brand-2 pt-4 pb-4 text-center">contacto</h1>
+      </div>
+    </div>
 
     <section class="contacto">
-      <div class="row align-items-center">
-        <div class="col-12 mt-3 text-center">
-          <h1 class="title-l mt-5">contacto</h1>
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col-12 col-md-6 p-5">
-          <div class="w-75">
+      <div class="row container d-flex align-items-center justify-content-center">
+        <div class="col-12 col-md-6">
+          <div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Nombre</label>
               <input type="text" class="form-control" placeholder="Nombre" aria-label="First name" />
@@ -84,23 +84,23 @@
           </div>
 
           <div class="align-items-center mt-4">
-            <button type="reset" class="btn btn-dark text-capitalize">
+            <button type="submit" class="gr-button gr-button-secondary text-capitalize">
               restablecer
             </button>
-            <button type="submit" class="btn btn-success text-capitalize">
+            <button type="submit" class="gr-button gr-button-primary text-capitalize">
               enviar
             </button>
           </div>
         </div>
 
-        <div class="col-12 col-md-6 align-items-center">
-          <div class="text-center fs-4 fw-bold">
+        <div class="col-12 col-md-6 d-flex justify-content-center flex-column align-items-center">
+          <div class="mt-5 fs-4 fw-bold">
             <p>+54***********</p>
             <p>Av. Ferre 610</p>
           </div>
 
-          <div class="border-top border-2 social-icons mt-5 text-center">
-            <p class="fs-4 fw-bold pt-4 mb-4">Seguinos en:</p>
+          <div class="border-top border-2 social-icons pt-5 mt-5 mb-5">
+            <p class="fs-4 fw-bold mb-4">Seguinos en:</p>
             <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
             <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
             <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
