--- a/index.html
+++ b/index.html
@@ -1,226 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Guacarace, una carrera de trail-running pensada para los runners mas aventureros!"
-    />
-    <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="Guacarace, una carrera de trail-running pensada para los runners mas aventureros!" />
+  <meta name="keywords" content="RUNNING, TRAIL, CARRERA, AVENTURA" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
-    <title>Guacarace</title>
-  </head>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-  <body class="body__style">
-    <div class="container-fluid">
-      <!-- INICIO HEADER -->
-      <header>
-        <div class="row">
-          <nav class="navbar navbar-expand-lg navbar-light menu__style">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img
-                  src="/img/gr-logo.svg"
-                  alt=""
-                  width="84"
-                  height="60"
-                  class="d-inline-block align-text-top"
-                />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div
-                class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end"
-                id="navbarNav"
-              >
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active text-uppercase"
-                      aria-current="page"
-                      href="./index.html"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/inscripciones.html"
-                      >Inscripciones</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/recorridos.html"
-                      >Recorridos</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-uppercase" href="/pages/info.html"
-                      >info</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a
-                      class="nav-link text-uppercase"
-                      href="/pages/contacto.html"
-                      >Contacto</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </header>
-      <!-- FIN HEADER -->
+  <title>Guacarace</title>
+</head>
 
-      <!-- INICIO HERO -->
-      <section>
-        <div class="row">
-          <div
-            class="col-md-12 d-flex justify-content-center align-items-center hero"
-          >
-            <div class="fs-5 fw-regular text-uppercase text-center pt-1">
-              <span class="fs-2 d-block fw-bold">superate</span>
-              <span class="fs-2 d-block fw-bold pb-2">sin limites</span>
-              <hr />
-              <span class="d-block pt-2">25 de septiembre</span>
-              <button
-                type="button"
-                class="btn btn-outline-light text-capitalize fw-bold mt-5"
-              >
-                inscribite
-              </button>
-            </div>
+<body class="body">
+  <div class="container-fluid">
+    <!-- INICIO HEADER -->
+    <header class="menu__style">
+
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class=" navbar-brand" href="#">
+            <img src="/img/gr-logo.svg" alt="logo-guacarace" width="84" height="60"
+              class="d-inline-block align-text-top" />
+          </a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse menu__style-nav" id="navbarNav">
+
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/inscripciones.html">Inscripciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/recorridos.html">Recorridos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/info.html">Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+
+
           </div>
         </div>
-      </section>
+      </nav>
 
-      <!-- FIN HERO -->
-      <section class="resena">
-        <div class="row align-items-center">
-          <div class="col-sm-12 col-md-6 pt-4">
-            <div class="p-5 text-center d-sm-none d-md-block">
-              <img src="/img/gr-logo.svg" alt="logo-guacarace" />
-            </div>
-            <div class="pt-5 d-none d-sm-block d-md-none">
-              <img
-                class="text-center w-50"
-                src="/img/gr-logo.svg"
-                alt="logo-guacarace"
-              />
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6">
-            <p class="fw-bold fst-italic fs-5 p-5">
-              Pensada por runners para runners. Una aventura única. Empieza
-              mucho antes del conteo previo a largar. Empieza cuando la
-              imaginas, cuando entrenas para llegar a ella, cuando en tu mente
-              pones esa meta, una difícil pero no imposible. La aventura recién
-              empieza…
-            </p>
-          </div>
-        </div>
-        <!-- Fin reseña -->
-      </section>
-      <!-- Incio video -->
-      <section class="video">
-        <div class="row align-items-center pb-4">
-          <div class="col-12">
-            <div class="ratio ratio-21x9 video__youtube">
-              <iframe
-                src="https://www.youtube.com/embed/Z_df-TUxPJs"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- fin video -->
+    </header>
+    <!-- FIN HEADER -->
 
-      <!-- inicia sponsor -->
-      <div class="row align-items-center sponsors text-center pt-4">
-        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
-          <img src="/img/gatorade.png" alt="gatorade-logo" />
-        </div>
-        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
-          <img src="/img/salomon.png" alt="salomon-logo" />
-        </div>
-        <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
-          <img src="/img/walmart.png" alt="walmart-logo" />
+    <!-- INICIO HERO -->
+    <section>
+      <div class="row">
+        <div class="col-md-12 d-flex justify-content-center align-items-center hero">
+          <div class="fs-5 fw-regular text-uppercase text-center pt-1">
+            <span class="fs-2 d-block fw-bold">superate</span>
+            <span class="fs-2 d-block fw-bold pb-2">sin limites</span>
+
+            <span class="d-block border-top pt-2">25 de septiembre</span>
+            <button type="button" class="btn btn-outline-light text-capitalize fw-bold mt-5">
+              inscribite
+            </button>
+          </div>
         </div>
       </div>
-      <!-- Fin sponsor -->
+    </section>
 
-      <footer class="footer">
-        <div class="row pt-4 pb-4 align-items-center">
-          <div class="col-sm-12 col-md-6">
-            <div class="p-4">
-              <img
-                src="../img//logo_guacarace-color.svg"
-                alt="guacarace logo"
-                width="84"
-                height="auto"
-              />
-            </div>
+    <!-- FIN HERO -->
+    <section class="resena">
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-6 pt-4">
+          <div class="p-5 text-center d-sm-none d-md-block">
+            <img src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
-
-          <div class="col-sm-12 col-md-6">
-            <div class="social-icons">
-              <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
-              <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
-              <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
-            </div>
+          <div class="pt-5 d-none d-sm-block d-md-none">
+            <img class="text-center w-50" src="/img/gr-logo.svg" alt="logo-guacarace" />
           </div>
         </div>
-      </footer>
+        <div class="col-sm-12 col-md-6">
+          <p class="fw-bold fst-italic fs-5 p-5">
+            Pensada por runners para runners. Una aventura única. Empieza
+            mucho antes del conteo previo a largar. Empieza cuando la
+            imaginas, cuando entrenas para llegar a ella, cuando en tu mente
+            pones esa meta, una difícil pero no imposible. La aventura recién
+            empieza…
+          </p>
+        </div>
+      </div>
+      <!-- Fin reseña -->
+    </section>
+    <!-- Incio video -->
+    <section class="video">
+      <div class="row align-items-center pb-4">
+        <div class="col-12">
+          <div class="ratio ratio-21x9 video__youtube">
+            <iframe src="https://www.youtube.com/embed/Z_df-TUxPJs" title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- fin video -->
+
+    <!-- inicia sponsor -->
+    <div class="row align-items-center sponsors text-center pt-4">
+      <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
+        <img src="/img/gatorade.png" alt="gatorade-logo" />
+      </div>
+      <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
+        <img src="/img/salomon.png" alt="salomon-logo" />
+      </div>
+      <div class="col-auto col-md-4 col-lg-4 p-2 sponsors-img">
+        <img src="/img/walmart.png" alt="walmart-logo" />
+      </div>
     </div>
-    <!-- CONTAINER -->
+    <!-- Fin sponsor -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <footer class="footer">
+      <div class="row pt-4 pb-4 align-items-center">
+        <div class="col-sm-12 col-md-6">
+          <div class="p-4">
+            <img src="../img//logo_guacarace-color.svg" alt="guacarace logo" width="84" height="auto" />
+          </div>
+        </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+        <div class="col-sm-12 col-md-6">
+          <div class="social-icons">
+            <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
+            <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
+            <a href="#"><img src="../img/youtube.svg" alt="youtube" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <!-- CONTAINER -->
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
+
 </html>
