--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -19,42 +19,48 @@
   <title>Recorridos | Guacarace</title>
 </head>
 
-<body class="body__style">
-  <div class="container-fluid bg-container">
+<body>
+  <div class="container-fluid bg-container body__style">
     <!-- INICIO HEADER -->
-    <header>
-      <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-light menu__style">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="/img/gr-logo.svg" alt="" width="84" height="60" class="d-inline-block align-text-top" />
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-flex justify-content-md-start justify-content-lg-end" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase" href="/pages/inscripciones.html">Inscripciones</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active text-uppercase" href="/pages/recorridos.html">Recorridos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase" href="/pages/info.html">info</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-uppercase" href="/pages/contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
+    <header class="menu__style">
+
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class=" navbar-brand" href="#">
+            <img src="/img/gr-logo.svg" alt="logo-guacarace" width="84" height="60"
+              class="d-inline-block align-text-top" />
+          </a>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse menu__style-nav" id="navbarNav">
+
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./inscripciones.html">Inscripciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./recorridos.html">Recorridos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./info.html">Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+
+
           </div>
-        </nav>
-      </div>
+        </div>
+      </nav>
+
     </header>
     <!-- FIN HEADER -->
 
