ajustes de botones y links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class=" navbar-brand" href="#">
+          <a class=" navbar-brand" href="./index.html">
             <img src="/img/gr-logo.svg" alt="logo-guacarace" width="84" height="60"
               class="d-inline-block align-text-top" />
           </a>
@@ -73,17 +73,17 @@
             <span class="fs-2 d-block fw-bold">superate</span>
             <span class="fs-2 d-block fw-bold pb-2">sin limites</span>
 
-            <span class="d-block border-top pt-2">25 de septiembre</span>
-            <button type="button" class="btn btn-outline-light text-capitalize fw-bold mt-5">
-              inscribite
-            </button>
+            <span class="d-block border-top pt-2 text-uppercase">25/sep/2022</span>
+
+            <a class="btn btn-outline-light text-uppercase font-monospace mt-4" href="#lacarrera"
+              role="button">participar</a>
           </div>
         </div>
       </div>
     </section>
 
     <!-- FIN HERO -->
-    <section class="resena">
+    <section id="lacarrera" class="resena">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6 pt-4">
           <div class="p-5 text-center d-sm-none d-md-block">
@@ -94,20 +94,21 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <p class="fw-bold fst-italic fs-5 p-5">
-            Pensada por runners para runners. Una aventura única. Empieza
-            mucho antes del conteo previo a largar. Empieza cuando la
-            imaginas, cuando entrenas para llegar a ella, cuando en tu mente
+          <p class="fw-bold fst-italic fs-5 text-center">
+            Pensada por runners para runners.<br>Empieza
+            mucho antes del conteo previo a largar.<br>Cuando la
+            imaginas, cuando entrenas para llegar a ella,<br>cuando en tu mente
             pones esa meta, una difícil pero no imposible. La aventura recién
             empieza…
           </p>
+
         </div>
       </div>
       <!-- Fin reseña -->
     </section>
     <!-- Incio video -->
     <section class="video">
-      <div class="row align-items-center pb-4">
+      <div class="row align-items-center pt-4 pb-4">
         <div class="col-12">
           <div class="ratio ratio-21x9 video__youtube">
             <iframe src="https://www.youtube.com/embed/Z_df-TUxPJs" title="YouTube video player" frameborder="0"
