--- a/pages/recorridos.html
+++ b/pages/recorridos.html
@@ -98,7 +98,7 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -125,7 +125,7 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -152,7 +152,7 @@
             </div>
 
             <div>
-              <a class="pt-4 nav-link fw-bold text-capitalize" href="#">descargar recorrido</a>
+              <a class="pt-4 nav-link fw-bold font-monospace text-uppercase" href="#">descargar recorrido</a>
             </div>
           </div>
           <div class="col-12 col-md-6">
