--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;1,800&display=swap"
+    rel="stylesheet" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -92,12 +93,8 @@
           </div>
 
           <div class="align-items-center mt-4">
-            <button type="submit" class="gr-button gr-button-secondary text-capitalize mt-2">
-              restablecer
-            </button>
-            <button type="submit" class="gr-button gr-button-primary text-capitalize mt-2">
-              enviar
-            </button>
+            <input class="btn btn-success font-monospace text-uppercase me-1" type="submit" value="enviar">
+            <input class="btn btn-secondary font-monospace text-uppercase ms-1" type="reset" value="reset">
           </div>
         </div>
 
