--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;1,800&display=swap"
+    rel="stylesheet" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -68,7 +69,7 @@
         <div class="col-12 pt-5 align-items-center justify-content-center">
           <div class="mt-5 pt-4 align-middle">
             <p class="fs-3 fw-bold fst-italic text-uppercase">Inscripciones</h1>
-            <p class="fs-1 fw-bold fst-italic text-uppercase">21k / 15k / 7k</h1>
+            <p class="title-l">21k / 15k / 7k</h1>
           </div>
 
         </div>
@@ -79,14 +80,15 @@
       <div class="row align-items-center p-5">
         <div class="col-12 p-5">
           <div class="text-center">
-            <h2 class="d-xs-none text-uppercase fw-bold">formulario de inscripcion</h2>
-            <h5 class="d-none d-xs-block">formulario de inscripcion</h5>
-            <p class="mt-2 text-justify">Te dirigiremos al sitio donde deberas completar el formulario de
-              pre-inscripcion y
-            <p>ademas elegir la forma de pago, para asegurar tu lugar en la carrera
-            <p>
+            <h2 class="d-xs-none text-uppercase fw-bold">formulario de pre-inscripcion</h2>
+            <h5 class="d-none d-xs-block">formulario de pre-inscripcion</h5>
+            <p class="mt-2 text-justify">
+              Para completar el proceso de pre-inscripción y elegir la forma de pago,
+              <br>complete los datos solicitados en
+              el siguiente link:
             </p>
-            <button class="btn btn-dark text-center text-capitalize mt-4">inscribite</button>
+            <button type="button" href="#"
+              class="btn btn-outline-dark font-monospace text-uppercase mt-4">pre-inscripcion</button>
           </div>
         </div>
       </div>
