ajustes en formulario de preinscripcion y links

--- a/index.html
+++ b/index.html
@@ -98,9 +98,13 @@
             Pensada por runners para runners.<br>Empieza
             mucho antes del conteo previo a largar.<br>Cuando la
             imaginas, cuando entrenas para llegar a ella,<br>cuando en tu mente
-            pones esa meta, una difícil pero no imposible. La aventura recién
+            pones esa meta, una difícil pero no imposible.<br>La aventura recién
             empieza…
           </p>
+          <div class="row align-items-center">
+            <a href="./pages/inscripciones.html"
+              class="link-light fw-bold fs-5 fst-italic text-uppercase text-center font-monospace pt-3">Inscribirme</a>
+          </div>
 
         </div>
       </div>
