--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -87,8 +87,8 @@
               <br>complete los datos solicitados en
               el siguiente link:
             </p>
-            <button type="button" href="#"
-              class="btn btn-outline-dark font-monospace text-uppercase mt-4">pre-inscripcion</button>
+            <a href="/pages/form-inscricipcion.html"
+              class="btn btn-outline-dark font-monospace text-uppercase mt-4 ">Pre inscripcion</a>
           </div>
         </div>
       </div>
