--- a/pages/form-inscricipcion.html
+++ b/pages/form-inscricipcion.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-    <title>Contactanos | Guacarace</title>
+    <title>Pre-Inscripcion | Guacarace</title>
 </head>
 
 <body>
@@ -71,12 +71,17 @@
             <!-- contenedor de formulario -->
             <div class="row mx-auto form__pre-container shadow-sm p-3 mb-5 bg-body rounded">
                 <div class="col">
-                    <div class="row">
-                        <div class="col-12">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-md-6">
                             <h3 class="mt-4 text-uppercase fw-bold">Formulario de pre-inscripcion</h3>
                             <p class="text-muted text-justify">
                                 Luego de completar tus datos,
-                                te enviaremos a la plataforma donde realizaras el pago</p>
+                                te enviaremos a la plataforma de pago</p>
+                        </div>
+                        <div class="col-12 col-md-6 gr-2 mt-2 text-sm-start text-md-end">
+                            <a href="/index.html">
+                                <span class="form__pre-link text-uppercase text-muted fw-regular">volver</span>
+                            </a>
                         </div>
                     </div>
                     <!-- formulario -->
